--- a/src/components/FeaturedMovie/styles.module.css
+++ b/src/components/FeaturedMovie/styles.module.css
@@ -24,6 +24,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  color: #fff;
 }
 
 .cbfc-rating {
@@ -48,6 +49,7 @@
   margin-bottom: 30px;
   opacity: 0.9;
   text-align: center;
+  color: #fff;
 }
 
 .movie-actions {
